--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # CONFIGURANDO JSP
-spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.prefix=/WEB-INF/views
 spring.mvc.view.suffix=.jsp
 
 # BD
@@ -9,3 +9,4 @@ spring.datasource.username=root
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
