--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.4.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.220</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -60,7 +68,6 @@
             <version>3.0.1</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -82,5 +89,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
